# xlutils

./: .gitignore  .pre-commit-config.yaml  PLAN_FEATURES.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  demo.md  gen_demo.py  index.md  justfile
src/xlutils/: __init__.py  models.py  normalizer.py  sheet_spec.py  styler.py  themes.py  utils.py  writer.py
tests/: justfile  test_normalizer.py  test_styler.py  test_writer.py
